# shmem

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  Third_Party_Open_Source_Software_List.yaml  requirements-examples.txt  requirements.txt  setup.py
.agents/: README.md
.agents/skills/: README.md  skill-format-guide.md
.agents/skills/shmem-ops-code-gen/: SKILL.md
.agents/skills/shmem-ops-code-review/: SKILL.md
.agents/skills/shmem-ops-compile-debug/: SKILL.md
.agents/skills/shmem-ops-correctness-eval/: SKILL.md
.agents/skills/shmem-ops-design/: SKILL.md
.agents/skills/shmem-ops-dev/: SKILL.md
.agents/skills/shmem-ops-performance-eval/: SKILL.md
.agents/skills/shmem-ops-performance-optim/: SKILL.md
.agents/skills/shmem-ops-testcase-gen/: SKILL.md
.agents/skills/shmem-ops-torch-bind/: SKILL.md
.gitcode/: PULL_REQUEST_TEMPLATE.zh-CN.md
docs/: SECURITY.md  code_organization.md  coding_style_guide.md  compilation_build_guide.md  conf.py  glossary.md  index.rst  multi_instance.md  pre-commit_guide.md  principles.md  quickstart.md
docs/api/: atomic_api_sync_async_comparison.md  device_api.rst  env_vars_intro.md  pythonAPI.md  stream_api_usage.md
docs/debug/: Troubleshooting_FAQs.md  dump_debug.md  log_debug.md  profiling.md  tools_debug.md
docs/deployment/: shmem_so_library_dependencies.md
docs/example/: api_demo.md  example.md
docs/principles/: config_store_bootstrap.md  init_finalize.md  multi_instance.md  team.md
docs/tools/: pre-commit_guide.md  root_info_generate_user_guide.md  shmem_config_guide.md
examples/: CMakeLists.txt
examples/aclgraph_demo/: README.md  aclgraph_demo_kernel.cpp  add_custom.h  main.cpp
examples/allgather/: README.md  allgather_kernel.cpp  main.cpp  run.sh
examples/allgather/scripts/: data_gen.py  data_statistic.py
examples/allgather_matmul/: README.md  main.cpp
examples/allgather_matmul/scripts/: run.sh
examples/allgather_matmul_padding/: main.cpp
examples/allgather_matmul_padding/scripts/: run.sh
examples/allgather_matmul_with_gather_result/: README.md  main.cpp
examples/allgather_matmul_with_gather_result/scripts/: run.sh
examples/cmo/: README.md  main.cpp
examples/combine/: CMakeLists.txt  README.md
examples/combine/combine_classic/: CMakeLists.txt  README.md  combine_kernel.cpp  combine_kernel.h  main.cpp
examples/combine/combine_doubleplane/: CMakeLists.txt  README.md  combine_doubleplane_kernel.cpp  main.cpp
examples/combine/scripts/: check_combine.py  data_gen.py  summarize_perf.py
examples/dispatch/: CMakeLists.txt  README.md
examples/dispatch/dispatch_classic/: CMakeLists.txt  README.md  dispatch_kernel.cpp  dispatch_kernel.h  main.cpp
examples/dispatch/dispatch_doubleplane/: CMakeLists.txt  README.md  dispatch_doubleplane_kernel.cpp  main.cpp
examples/dispatch/scripts/: check_dispatch.py  data_gen.py
examples/dispatch_gmm_combine/: CMakeLists.txt  README.md  main.cpp
examples/dispatch_gmm_combine/include/: dispatch_gmm_combine.h  moe_token_unpermute.h  select_helper.h  sync_util.h
examples/dispatch_gmm_combine/scripts/: run.sh
examples/dispatch_gmm_combine/utils/: check_result.py  gen_data.py  gen_data_by_torch_npu.py  token_dispatch_combine.py
examples/dynamic_tiling/: README.md  main.cpp
examples/dynamic_tiling/scripts/: run.sh
examples/dynamic_tiling/utils/: get_best_result.py
examples/hccs_sio_link/: CMakeLists.txt  README.md  main.cpp
examples/init/: CMakeLists.txt  README.md  main.cpp  run.sh
examples/kv_shuffle/: README.md  kv_shuffle_kernel.cpp  main.cpp
examples/kv_shuffle/scripts/: golden.py  run.sh
examples/matmul_allreduce/: main.cpp
examples/matmul_reduce_scatter/: main.cpp
examples/matmul_reduce_scatter_padding/: main.cpp
examples/mte_perftest/: README.md
examples/multi_instance/: README.md  main.cpp  multi_instance_kernel.cpp  run.sh
examples/notifywait/: CMakeLists.txt  README.md  main.cpp  run.sh
examples/rdma_aclgraph_demo/: README.md  rdma_aclgraph_demo_kernel.cpp
examples/rdma_demo/: README.md  main.cpp  rdma_demo_kernel.cpp  run.sh
examples/rdma_perftest/: README.md  main.cpp  rdma_perftest_kernel.cpp  run.sh
examples/rdma_perftest_demo/: CMakeLists.txt  README.md  main.cpp  rdma_perftest_demo_kernel.cpp  run.sh
examples/rdma_sync_barrier_demo/: README.md  rdma_sync_barrier_demo_kernel.cpp
examples/rma_d2h_demo/: README.md  run.sh
examples/sdma/: README.md  main.cpp  run.sh
examples/shmem_perftest/: CMakeLists.txt  README.md  run.sh
examples/simt_rma/: CMakeLists.txt  README.md  main.cpp  run.sh
examples/simt_rma_scalar/: CMakeLists.txt  README.md  main.cpp  run.sh
examples/simt_rma_ub2gm/: CMakeLists.txt  README.md  main.cpp  run.sh
examples/torch_binding/: CMakeLists.txt
examples/torch_binding/include/: shmem_torch_kernel.h  torch_register.h
examples/torch_binding/src/: torch_bindings.cpp
examples/udma_atomic_add/: CMakeLists.txt  README.md  main.cpp  run.sh  udma_atomic_add_kernel.cpp
examples/udma_demo/: README.md  main.cpp  udma_demo_kernel.cpp
examples/utils/: gen_data.py  moe_perf_host.h  param.h  perftest_common_types.h  summarize_moe_perf.py  utils.h  utils.py  verify_result.py
include/: shmem.h
include/device/: shmem_def.h
include/device_simt/: shmem_simt_common_types.h
include/host/: shmem_host_def.h
include/host_device/: shmem_common_types.h
scripts/: build.sh  help.info  install.sh  preinstall_check.sh  release.sh  run_examples.sh  set_env.sh
src/: CMakeLists.txt
src/device_simt/: shmemi_device_simt_common.h  shmemi_device_simt_common.hpp  shmemi_device_simt_meta.h
src/host/: shmemi_host_def.h
src/host_device/: shmemi_host_device_constant.h
tests/examples/: README.md
tests/package_smoke/: run_install_smoke.sh
tests/unittest/: CMakeLists.txt  unittest_main_test.h
tools/pre-commit/: check_header_inclusion.py  pyproject.toml
tools/rootinfo/: CMakeLists.txt
(+304 files in other folders)
